Resolves: tdf#123801 captioning issues

revert attempt to by default create a msword roundtrip friendly caption.

commit 2333786aa0eaf70c45c80e546239fb3565b1b4e7
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Mar 20 11:48:28 2018 +0000

    Resolves: tdf#116474 bring hidden text property under undo control

commit ebd43aee5b9cf98ed96ce28985267ad0bc980b7a
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Apr 7 13:41:38 2017 +0100

    rework setting hidden property on line break

commit feedd45ba2dd308af2d3a1b2f64681b9467535b6
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Oct 27 14:37:03 2016 +0100

    in msword the hard-break between image and caption has a width

commit ba401ee10be2fb051bc961680f35b04e4e77a32d
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Sep 1 09:39:37 2016 +0100

    coverity#1372378 Dereference null return value

commit 93ab0ff24cb71c36c9e7958046e96d7472b5af90
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Sep 10 15:46:57 2015 +0100

    Related: tdf#93676 default to as-char inside captions

Change-Id: I460046a10f36bed13e2f4651b4c0a9b9b0662015
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93559
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>